# view-fractals

./: Cargo.toml  LICENSE  README.md  build.rs
src/: fractal.rs  main.rs  renderer.rs  text.rs
