[package]
name = "view-fractals"
version = "0.3.0"
authors = ["Thomas Lienbacher <lienbacher.tom@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
num = "0.4"
minifb = { version = "0.23", features = ["wayland"] }
palette = "0.5"
rayon = "1.3"
fontdue = "0.0.4"
ocl = "0.19"
png = "0.17"
interpolation = "0.2"
